feat(other)：数据库设计文档和代码清理